Arrays.list changed to List.of