@@ -2,12 +2,9 @@ package sudoku;
 
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
 import sudoku.group.SudokuBox;
 import sudoku.group.SudokuColumn;
 import sudoku.group.SudokuRow;
@@ -21,10 +18,15 @@ public class SudokuBoard implements PropertyChangeListener {
     private SudokuSolver sudokuSolver;
 
     public SudokuBoard(SudokuSolver solver) {
-        board = Stream.generate(() -> Arrays.asList(new SudokuField[9])).limit(9).collect(Collectors.toList());
+        board = Stream.generate(() -> {
+            SudokuField[] fields = new SudokuField[9];
+            for (int i = 0; i < 9; i++) {
+                fields[i] = new SudokuField(0);
+            }
+            return List.of(fields);
+        }).limit(9).collect(Collectors.toList());
         for (int i = 0; i < 9; i++) {
             for (int j = 0; j < 9; j++) {
-                board.get(i).set(j,new SudokuField());
                 board.get(i).get(j).setListener(this);
             }
         }
